Fixed student view of assignments on mobile devices

--- a/frontend/src/components/Sidebar.css
+++ b/frontend/src/components/Sidebar.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
 
-  transition: background-color var(--transition-base), border-color var(--transition-base);
+  transition: left var(--transition-base), background-color var(--transition-base), border-color var(--transition-base);
 }
 
 .SidebarLogo {
